app/dev/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deploy
  namespace: dev

spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: spring-boot
  template:
    metadata:
      labels:
        app: spring-boot
    spec:
      containers:
        - name: backend
          image: zven408/community-be-app:1.1.5
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 256Mi

          startupProbe:
            httpGet:
               path: /actuator/health
               port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 0
