app/dev/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cluster-service
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: spring-boot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
